<resources>
    <string name="key_id_open_default" translatable="false">ca-app-pub-3940256099942544/3419835294</string>
    <string name="facebook_app_id" translatable="false">141126074871515</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb141126074871515</string>
    <string name="sodk_app_name" translatable="false">Word Office</string>
    <string name="appbar_scrolling_view_behavior" translatable="false">office.git.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="boxsdk_sha1_fingerprint" translatable="false">sha 1:</string>
    <string name="boxsdk_sha256_fingerprint" translatable="false">sha 256:</string>
    <string name="character_counter_pattern" translatable="false">%1$d / %2$d</string>
    <string name="help_search_subtitle_format" translatable="false">%1$s • %2$s</string>
    <string name="view_article_html_body" translatable="false">"&lt;HTML dir=\"auto\">
                &lt;HEAD>&lt;LINK href='%1$s' type='text/css' rel='stylesheet'/>&lt;/HEAD>
                &lt;body>
                &lt;h1 id=\"title\">%2$s&lt;/h1>
                %3$s
                &lt;footer>&lt;p id=\"footerText\">%4$s&lt;/p>&lt;/footer>
                &lt;/body>
                &lt;/HTML>"</string>
    <string name="view_article_seperator" translatable="false">•</string>
    <string name="abc_font_family_body_1_material" translatable="false">sans-serif</string>
    <string name="abc_font_family_body_2_material" translatable="false">sans-serif-medium</string>
    <string name="abc_font_family_button_material" translatable="false">sans-serif-medium</string>
    <string name="abc_font_family_caption_material" translatable="false">sans-serif</string>
    <string name="abc_font_family_display_1_material" translatable="false">sans-serif</string>
    <string name="abc_font_family_display_2_material" translatable="false">sans-serif</string>
    <string name="abc_font_family_display_3_material" translatable="false">sans-serif</string>
    <string name="abc_font_family_display_4_material" translatable="false">sans-serif-light</string>
    <string name="abc_font_family_headline_material" translatable="false">sans-serif</string>
    <string name="abc_font_family_menu_material" translatable="false">sans-serif</string>
    <string name="abc_font_family_subhead_material" translatable="false">sans-serif</string>
    <string name="abc_font_family_title_material" translatable="false">sans-serif-medium</string>
    <string name="abc_menu_alt_shortcut_label" translatable="false">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label" translatable="false">Ctrl+</string>
    <string name="abc_menu_function_shortcut_label" translatable="false">Function+</string>
    <string name="abc_menu_meta_shortcut_label" translatable="false">Meta+</string>
    <string name="abc_menu_shift_shortcut_label" translatable="false">Shift+</string>
    <string name="abc_menu_space_shortcut_label" translatable="false">space</string>
    <string name="abc_menu_sym_shortcut_label" translatable="false">Sym+</string>
    <string name="abc_prepend_shortcut_label" translatable="false">Menu+</string>
    <string name="GETTING_STARTED">Getting Started.pdf</string>
    <string name="USER_GUIDE">User Guide.pdf</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="app_loading">Loading…</string>
    <string name="articles_list_fragment_error_message">Failed to get articles</string>
    <string name="articles_list_fragment_no_articles_found">No articles found</string>
    <string name="ask_request_list_failed_request_message">Message failed</string>
    <string name="belvedere_dialog_camera">Camera</string>
    <string name="belvedere_dialog_gallery">Gallery</string>
    <string name="belvedere_fam_desc_collapse_fam">Collapse Floating Action Menu</string>
    <string name="belvedere_fam_desc_expand_fam">Expand Floating Action Menu</string>
    <string name="belvedere_fam_desc_open_gallery">Import file from gallery</string>
    <string name="belvedere_fam_desc_open_google_photos">Import image from Google Photos</string>
    <string name="belvedere_image_stream_file_too_large">File too large</string>
    <string name="belvedere_image_stream_title">Photo library</string>
    <string name="belvedere_image_stream_unknown_app">@string/request_attachment_generic_unknown_app</string>
    <string name="belvedere_permissions_denied">Permissions denied</string>
    <string name="belvedere_sdk_fpa_suffix_v2">.belvedere2.attachments</string>
    <string name="belvedere_stream_item_camera_tile_desc">Import image from camera</string>
    <string name="belvedere_stream_item_select_file_desc">Select file %s</string>
    <string name="belvedere_stream_item_select_image_desc">Select image %s</string>
    <string name="belvedere_stream_item_unselect_file_desc">Unselect file %s</string>
    <string name="belvedere_stream_item_unselect_image_desc">Unselect image %s</string>
    <string name="belvedere_toolbar_desc_collapse">Close image picker</string>
    <string name="blocked_ip_error_message">You are attempting to log in to Box from a location that has not been approved by your admin. Please talk to your admin to resolve this issue.</string>
    <string name="boxsdk_Authenticating">Authenticating</string>
    <string name="boxsdk_Authentication_cancelled">Authentication Cancelled</string>
    <string name="boxsdk_Authentication_fail">Authentication Failed</string>
    <string name="boxsdk_Authentication_fail_forbidden">Contact your administrator to authorize this device.</string>
    <string name="boxsdk_Authentication_fail_url_mismatch">The redirect url is not valid</string>
    <string name="boxsdk_Cancel">Cancel</string>
    <string name="boxsdk_Continue">Continue</string>
    <string name="boxsdk_Create_folder">Create folder</string>
    <string name="boxsdk_Go_back">Go back</string>
    <string name="boxsdk_Please_wait">Please wait…</string>
    <string name="boxsdk_Security_Warning">Security Warning</string>
    <string name="boxsdk_Select">Select</string>
    <string name="boxsdk_Select_an_account_to_use">Select an account to use</string>
    <string name="boxsdk_There_are_problems_with_the_security_certificate_for_this_site">There are problems with the security certificate for this site.</string>
    <string name="boxsdk_Use_a_different_account">Use a different account</string>
    <string name="boxsdk_alert_dialog_cancel">Cancel</string>
    <string name="boxsdk_alert_dialog_ok">Submit</string>
    <string name="boxsdk_alert_dialog_password">Password</string>
    <string name="boxsdk_alert_dialog_text_entry">This website or application is requesting authentication.</string>
    <string name="boxsdk_alert_dialog_username">Username</string>
    <string name="boxsdk_box_app_signature">3000</string>
    <string name="boxsdk_button_ok">OK</string>
    <string name="boxsdk_button_okay">OKAY</string>
    <string name="boxsdk_common_name">common name:</string>
    <string name="boxsdk_details">Details</string>
    <string name="boxsdk_error_fatal_refresh">You have been logged out.</string>
    <string name="boxsdk_error_network_connection">Unable to detect a network connection</string>
    <string name="boxsdk_error_terms_of_service">Your administrator has changed your TOS. You must login, and accept the TOS to continue.</string>
    <string name="boxsdk_expires_on">expires on:</string>
    <string name="boxsdk_fingerprints">fingerprints:</string>
    <string name="boxsdk_issued_by">issued by:</string>
    <string name="boxsdk_issued_on">issued on:</string>
    <string name="boxsdk_issued_to">issued to:</string>
    <string name="boxsdk_no_offline_access">No offline access</string>
    <string name="boxsdk_no_offline_access_detail">"We couldn't detect a network connection."</string>
    <string name="boxsdk_no_offline_access_todo">To log in, connect to a WiFi or mobile data network.</string>
    <string name="boxsdk_org_name">organization name:</string>
    <string name="boxsdk_org_unit">organization unit:</string>
    <string name="sodk_certificate_common_name">Common Name (CN)</string>
    <string name="sodk_certificate_country">Country (C)</string>
    <string name="sodk_certificate_details">Certificate Details</string>
    <string name="sodk_certificate_email">Email</string>
    <string name="sodk_certificate_expiry">Expiry Date</string>
    <string name="sodk_certificate_extended_keyusage">Extended Key Usage</string>
    <string name="sodk_certificate_keyusage">Key Usage</string>
    <string name="sodk_certificate_org">Organisation (O)</string>
    <string name="sodk_certificate_org_unit">Organizational Unit (OU)</string>
    <string name="sodk_certificate_sign">Sign</string>
    <string name="sodk_certificate_verify_title">Document Signature Verification</string>
    <string name="sodk_certificates">Available Certificates</string>
    <string name="sodk_editor_OK">OK</string>
    <string name="sodk_editor_redact_apply_upper">APPLY</string>
    <string name="sodk_editor_redact_mark_area_upper">MARK AREA</string>
    <string name="sodk_editor_redact_mark_upper">MARK TEXT</string>
    <string name="sodk_editor_redact_remove_upper">REMOVE</string>
    <string name="sodk_editor_update">Update</string>
    <string name="sodk_issued_to">Issued To</string>
    <string name="sodk_no_certificates">No certificates available - please contact your IT support</string>
    <string name="sodk_pro_popup_button">UPGRADE OPTIONS</string>
    <string name="sodk_pro_popup_message">Track Changes and Form Filling capabilities are features of SmartOffice PRO</string>
    <string name="sodk_pro_popup_title">PRO FEATURE</string>
    <string name="sodk_support_change_email">Change Email Address</string>
    <string name="sodk_support_contact_us">Contact Us</string>
    <string name="sodk_support_done">Done</string>
    <string name="sodk_support_faq">FAQ</string>
    <string name="sodk_support_manage_subscriptions">Manage My Subscriptions</string>
    <string name="sodk_support_privacy_policy">Privacy Policy</string>
    <string name="sodk_support_support">Support</string>
    <string name="sodk_support_terms_of_use">Terms Of Use</string>
    <string name="sodk_support_view_my_requests">View My Requests</string>
    <string name="home">Home</string>
    <string name="file">File</string>
    <string name="edit">Edit</string>
    <string name="insert">Insert</string>
    <string name="lib_page">Page</string>
    <string name="the_current_version_is_old_nplease_update_to_the_latest_version">The current version is old.\nPlease update to the latest version</string>
</resources>