<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@color/sodk_gold_yellow" android:layout_width="wrap_content" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="center" android:layout_gravity="center_horizontal" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <ImageView android:layout_gravity="center" android:id="@id/imageView2" android:background="@drawable/sodk_ic_icon_lock" android:layout_width="10.0dip" android:layout_height="15.0dip" />
        <office.file.ui.editor.SOTextView android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" android:textColor="@color/sodk_palette_black" android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="10.0dip" android:text="@string/sodk_pro_popup_title" />
    </LinearLayout>
    <office.file.ui.editor.SOTextView android:textColor="@color/sodk_palette_black" android:layout_width="300.0dip" android:layout_height="wrap_content" android:layout_marginBottom="10.0dip" android:text="@string/sodk_pro_popup_message" android:textAlignment="center" android:layout_marginStart="10.0dip" android:layout_marginEnd="10.0dip" />
    <Button android:textColor="@color/sodk_palette_black" android:layout_gravity="center" android:id="@id/upgrade_button" android:background="@drawable/sodk_iap_upgrade_button_bg" android:padding="15.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="10.0dip" android:text="@string/sodk_pro_popup_button" />
</LinearLayout>