<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:paddingHorizontal="@dimen/_20sdp"
    android:paddingTop="@dimen/_20sdp"
    android:paddingBottom="@dimen/_10sdp"
    android:background="@drawable/r4_bg"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sodk_app_name"
        android:textColor="@color/text"
        android:layout_gravity="center"
        android:textSize="@dimen/_18ssp"
        android:gravity="center"
        android:fontFamily="@font/opensan_regular"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/tv_update_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:lines="2"
        android:text="@string/the_current_version_is_old_nplease_update_to_the_latest_version"
        android:textColor="@color/text"
        android:layout_gravity="center"
        android:textSize="@dimen/_12ssp"
        android:gravity="center"
        android:fontFamily="@font/opensan_regular"
        android:textStyle="normal"/>


    <TextView
        android:id="@+id/tv_update_now"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/sodk_editor_update"
        android:textSize="@dimen/_13ssp"
        android:textColor="@color/blue"
        android:layout_gravity="center"
        android:padding="@dimen/_10sdp"/>
</LinearLayout>